--- a/control
+++ b/control
@@ -3,7 +3,7 @@ Name: math_lexer
 Depends: 
 Version: 0.0.1
 Architecture: iphoneos-arm
-Description: An awesome tool of some sort!!
+Description: Mathematical expression lexer
 Maintainer: uroboro <uroboro845@gmail.com>
 Author: uroboro <uroboro845@gmail.com>
 Section: System
